--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,3 @@
 == a.b.strider-
 
-Creating a blog to get up to snuff with Ruby on Rails.  Screw web 2.0, I'm keepin it classic with a look straight out of your local warez scene.
+Creating a blog to get up to snuff with Ruby on Rails.  Screw web 2.0, I'm keepin it classic with a look straight out of your local warez scene.  Currently live at http://mtighe.herokuapp.com/
